--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+#tmp & build folders
+/bower_components/
+/node_modules/
+.tmp/*
+build/*
+.idea/*
